VeraSandBox2016/src/objects/Catalog__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <description>Is this record currently in use?</description>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AoE_Category__c</fullName>
        <description>Category of Area of Expertise</description>
        <label>AoE Category</label>
        <picklist>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military / Policing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGBV (Sexual or Gender-Based Violence)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVIC (Conflict-related Violations Involving Children)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interaction with victims and witnesses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics and Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CVIC__c</fullName>
        <description>Conflict-related Violations Involving Children</description>
        <inlineHelpText>Conflict-related Violations Involving Children</inlineHelpText>
        <label>CVIC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <description>Main countries where language is spoken</description>
        <inlineHelpText>Main countries where language is spoken</inlineHelpText>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DAC_List__c</fullName>
        <description>Is this country on the DAC list?</description>
        <label>DAC List</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration_Hours__c</fullName>
        <description>How long does this module take to deliver?</description>
        <label>Duration (Hours)</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FIAR__c</fullName>
        <description>Financial Investigations and Asset Recovery</description>
        <inlineHelpText>Financial Investigations and Asset Recovery</inlineHelpText>
        <label>FIAR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FOR__c</fullName>
        <description>Forensics</description>
        <inlineHelpText>Forensics</inlineHelpText>
        <label>FOR</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GINV__c</fullName>
        <description>General Investigations</description>
        <inlineHelpText>General Investigations</inlineHelpText>
        <label>GINV</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRC_Member__c</fullName>
        <label>HRC Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>GINV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGBV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIAR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRRID__c</fullName>
        <description>This is the unique JRR ID number for catalog entries</description>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Language_Category__c</fullName>
        <label>Language Category</label>
        <picklist>
            <picklistValues>
                <fullName>JRR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MENA_JRR__c</fullName>
        <description>Is this country in MENA?</description>
        <label>MENA (JRR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Official_Name__c</fullName>
        <description>Official name of country</description>
        <label>Official Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profession_Category__c</fullName>
        <description>Category of record in question</description>
        <label>Profession Category</label>
        <picklist>
            <picklistValues>
                <fullName>Child Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensic Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Rights</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justice Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prosecutions / Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Witness / Victim Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_UN__c</fullName>
        <description>Which UN region does this country belong to?</description>
        <label>Region (UN)</label>
        <picklist>
            <picklistValues>
                <fullName>Africa : Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania: Aus-NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania: Pacific Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rome_Statute__c</fullName>
        <label>Rome Statute</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SGBV__c</fullName>
        <description>Sexual and Gender-based Violence</description>
        <inlineHelpText>Sexual and Gender-based Violence</inlineHelpText>
        <label>SGBV</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UN_Member__c</fullName>
        <description>Is this country a member of the UN?</description>
        <label>UN Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Catalog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Item_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Areas_of_Expertise</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Item_Type__c</columns>
        <columns>AoE_Category__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalog__c.Area_of_Expertise</value>
        </filters>
        <label>All Areas of Expertise</label>
    </listViews>
    <listViews>
        <fullName>All_Countries</fullName>
        <columns>NAME</columns>
        <columns>Official_Name__c</columns>
        <columns>Region_UN__c</columns>
        <columns>UN_Member__c</columns>
        <columns>MENA_JRR__c</columns>
        <columns>DAC_List__c</columns>
        <columns>HRC_Member__c</columns>
        <columns>Rome_Statute__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalog__c.Country</value>
        </filters>
        <label>All Countries</label>
    </listViews>
    <listViews>
        <fullName>All_Languages</fullName>
        <columns>NAME</columns>
        <columns>Language_Category__c</columns>
        <columns>Countries__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalog__c.Language</value>
        </filters>
        <label>All Languages</label>
    </listViews>
    <listViews>
        <fullName>All_Legal_Systems</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalog__c.Legal_System</value>
        </filters>
        <label>All Legal Systems</label>
    </listViews>
    <listViews>
        <fullName>All_Modules</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>GINV__c</columns>
        <columns>FOR__c</columns>
        <columns>SGBV__c</columns>
        <columns>CVIC__c</columns>
        <columns>FIAR__c</columns>
        <columns>Duration_Hours__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalog__c.Module</value>
        </filters>
        <label>All Modules</label>
    </listViews>
    <listViews>
        <fullName>All_Professions</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Item_Type__c</columns>
        <columns>Profession_Category__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Catalog__c.Profession</value>
        </filters>
        <label>All Professions</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs</pluralLabel>
    <recordTypes>
        <fullName>Area_of_Expertise</fullName>
        <active>true</active>
        <description>Catalog of all Areas of Expertise</description>
        <label>Area of Expertise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country</fullName>
        <active>true</active>
        <description>Catalog of all Countries</description>
        <label>Country</label>
    </recordTypes>
    <recordTypes>
        <fullName>Language</fullName>
        <active>true</active>
        <description>Catalog of all Languages</description>
        <label>Language</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal_System</fullName>
        <active>true</active>
        <description>Catalog of all Legal Systems</description>
        <label>Legal System</label>
    </recordTypes>
    <recordTypes>
        <fullName>Module</fullName>
        <active>true</active>
        <description>Catalog of all Modules</description>
        <label>Module</label>
    </recordTypes>
    <recordTypes>
        <fullName>Profession</fullName>
        <active>true</active>
        <description>Catalog of all Professions</description>
        <label>Profession</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>